[package]
name = "spider"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
linkify = "0.9.0"
reqwest = "0.11.18"
ratelimit = "0.7.0"
tokio = { version = "1.28.2", features = ["rt"] }
url = "2.4.0"
